# refraction_app

./: README.md  index.html  light_thinggo-1ae710c46d90e30c.js  light_thinggo-96232d5d809ed9f3.js
.github/workflows/: main.yml
eframe-ver/: Cargo.toml  index.html
eframe-ver/shaders/: collision.wgsl  display_to_srgb.wgsl  draw_lines.wgsl  frag.wgsl
eframe-ver/src/: app.rs  geometry.rs  main.rs  scene.rs  w_app.rs  wgpu_res.rs
lazer_refraction_renderer/: Cargo.toml
lazer_refraction_renderer/src/: app.rs  main.rs
lazer_refraction_renderer/src/background/: wgpu_app.rs
new_struture/lazer_refraction_renderer/src/: app.rs  lib.rs
new_struture/lazer_refraction_renderer/src/background/: mod.rs
testing-ver/: Cargo.toml
testing-ver/src/: main.rs  polygon.rs
wgpu-raw/: .gitignore  Cargo.toml  Trunk.toml  index.html
wgpu-raw/src/: app.rs  egui_renderer.rs  graphics.rs  lib.rs  main.rs
wgpu-raw/src/the_code/: geometry.rs  macros.rs  mod.rs  texture.rs  utils.rs  wgpu_app.rs
wgpu-raw/src/the_code/shaders/: collision.wgsl  compute_pass.wgsl  definitions.wgsl  display_to_srgb.wgsl  draw_geometry.wgsl  draw_lines.wgsl
