[package]
name = "refraction_app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
bytemuck = { version = "1.25.0", features = ["derive"] }







[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.4", features = ["futures"] }
wasm-bindgen = "0.2.121"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.98", features = ["Window", "Document", "HtmlElement", "Text"] }
log = "0.4.29"
wasm-bindgen-futures = "0.4.71"

