[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.12" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "29.0.3" }
pollster = {version ="0.4.0"}

glam = "0.33.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
rand = "0.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
