[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.13" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "29.0.1" }
pollster = {version ="0.4.0"}

glam = { version = "0.33.0", features = ["bytemuck", "encase"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
rand = "0.10.1"

encase = { version = "0.12.0"}


egui = "0.34.3"
egui-winit = "0.34.3"
egui-wgpu = "0.34.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
